Whitespace: tabs converted to spaces

--- a/sample-bibliography.bib
+++ b/sample-bibliography.bib
@@ -14,7 +14,7 @@
 %%%                        AND, also, 'legacy'-type bibs. It should assist authors in 
 %%%                        choosing the 'correct' at-bibtype and necessary bib-fields
 %%%                        so as to obtain the appropriate ACM Reference Format output. 
-%%%			   It also contains many 'Standard Abbreviations'. "
+%%%                       It also contains many 'Standard Abbreviations'. "
 %%%  }
 %%% ====================================================================
 
@@ -217,45 +217,45 @@
 %Entries
 
 @Article{Abril07,
-  author 	= "Patricia S. Abril and Robert Plant",
-  title 	= "The patent holder's dilemma: Buy, sell, or troll?",
-  journal 	= "Communications of the ACM",
-  volume 	= "50",
-  number 	= "1",
-  month 	= jan,
-  year 		= "2007",
-  pages 	= "36--44",
-  doi 		= "10.1145/1188913.1188915",
-  url		= "http://doi.acm.org/10.1145/1219092.1219093",
-  note		= "",
+  author        = "Patricia S. Abril and Robert Plant",
+  title         = "The patent holder's dilemma: Buy, sell, or troll?",
+  journal       = "Communications of the ACM",
+  volume        = "50",
+  number        = "1",
+  month         = jan,
+  year          = "2007",
+  pages         = "36--44",
+  doi           = "10.1145/1188913.1188915",
+  url           = "http://doi.acm.org/10.1145/1219092.1219093",
+  note          = "",
 }
 
 @Article{Cohen07,
-  author 	=	"Sarah Cohen and Werner Nutt and Yehoshua Sagic",
-  title		=	"Deciding equivalances among conjunctive aggregate queries",
-  journal 	=	JACM,
-  articleno	=	"5",
-  numpages	=	"50",
-  volume 	=	"54",
-  number 	= 	"2",
-  month 	=	apr,
-  year 		=	"2007",
-  doi 		=	"10.1145/1219092.1219093",
-  url 		=	"http://doi.acm.org/10.1145/1219092.1219093",
-  acmid		=	"1219093",
-  note 		= 	"",
+  author        = "Sarah Cohen and Werner Nutt and Yehoshua Sagic",
+  title         = "Deciding equivalances among conjunctive aggregate queries",
+  journal       = JACM,
+  articleno     = "5",
+  numpages      = "50",
+  volume        = "54",
+  number        = "2",
+  month         = apr,
+  year          = "2007",
+  doi           = "10.1145/1219092.1219093",
+  url           = "http://doi.acm.org/10.1145/1219092.1219093",
+  acmid         = "1219093",
+  note          = "",
 }
 
 
 @periodical{JCohen96,
-  key = 	 "Cohen",
+  key =          "Cohen",
   editor =       "Jacques Cohen",
   title =        "Special issue: Digital Libraries",
   journal =      CACM,
   volume =       "39",
-  number = 	 "11",
-  month =	 nov,
-  year = 	 "1996",
+  number =       "11",
+  month =        nov,
+  year =         "1996",
 }
 
 
@@ -266,12 +266,12 @@
   year =         "2001",
   address =      "New York, NY",
   edition =      "2nd.",
-  editor = 	 "",
-  volume = 	 "",
-  number = 	 "",
-  series = 	 "",
-  month = 	 "",
-  note = 	 "",
+  editor =       "",
+  volume =       "",
+  number =       "",
+  series =       "",
+  month =        "",
+  note =         "",
 }
 
 
@@ -283,39 +283,39 @@
   volume =       "68",
   address =      "New York, NY",
   publisher =    "Springer-Verlag",
-  doi = 	 "10.1007/3-540-09237-4",
-  url = 	 "http://dx.doi.org/10.1007/3-540-09237-4",
-  editor = 	 "",
-  number = 	 "",
-  month = 	 "",
-  note = 	 "",
+  doi =          "10.1007/3-540-09237-4",
+  url =          "http://dx.doi.org/10.1007/3-540-09237-4",
+  editor =       "",
+  number =       "",
+  month =        "",
+  note =         "",
 }
 
 
 @Inbook{Editor00,
-  author = 	 "",
+  author =       "",
   editor =       "Ian Editor",
   title =        "The title of book one",
   subtitle =     "The book subtitle",
   series =       "The name of the series one",
   year =         "2007",
-  volume = 	 "9",
+  volume =       "9",
   address =      "Chicago",
   edition =      "1st.",
   publisher =    "University of Chicago Press",
-  doi = 	 "10.1007/3-540-09237-4",
-  url = 	 "http://dx.doi.org/10.1007/3-540-09456-9",
-  chapter = 	 "",
-  pages = 	 "",
-  number = 	 "",
-  type = 	 "",
-  month = 	 "",
-  note = 	 "",
+  doi =          "10.1007/3-540-09237-4",
+  url =          "http://dx.doi.org/10.1007/3-540-09456-9",
+  chapter =      "",
+  pages =        "",
+  number =       "",
+  type =         "",
+  month =        "",
+  note =         "",
 }
 
 %
 @InBook{Editor00a,
-  author = 	 "",
+  author =       "",
   editor =       "Ian Editor",
   title =        "The title of book two",
   subtitle =     "The book subtitle",
@@ -324,15 +324,15 @@
   address =      "Chicago",
   edition =      "2nd.",
   publisher =    "University of Chicago Press",
-  doi = 	 "10.1007/3-540-09237-4",
-  url = 	 "http://dx.doi.org/10.1007/3-540-09456-9",
-  volume = 	 "",
-  chapter = 	 "100",
-  pages = 	 "",
-  number = 	 "",
-  type = 	 "",
-  month = 	 "",
-  note = 	 "",
+  doi =          "10.1007/3-540-09237-4",
+  url =          "http://dx.doi.org/10.1007/3-540-09456-9",
+  volume =       "",
+  chapter =      "100",
+  pages =        "",
+  number =       "",
+  type =         "",
+  month =        "",
+  note =         "",
 }
 
 
@@ -346,16 +346,16 @@
   year =         "1990",
   edition =      "2nd.",
   chapter =      "",
-  editor = 	 "Sape Mullender",
+  editor =       "Sape Mullender",
   pages =        "19--33",
-  doi = 	 "10.1145/90417.90738",
-  url = 	 "http://doi.acm.org/10.1145/90417.90738",
-  volume =	 "",
-  number = 	 "",
-  series =	 "",
-  type = 	 "",
-  month = 	 "",
-  note = 	 "",
+  doi =          "10.1145/90417.90738",
+  url =          "http://doi.acm.org/10.1145/90417.90738",
+  volume =       "",
+  number =       "",
+  series =       "",
+  type =         "",
+  month =        "",
+  note =         "",
 }
 
 
@@ -367,18 +367,18 @@
   booktitle =    "Lectures on Embedded Systems",
   publisher =    "Springer-Verlag",
   address =      "London",
-  volume = 	 "1494",
+  volume =       "1494",
   year =         "1998",
   chapter =      "",
-  editor = 	 "Grzegorz Rozenberg and Frits W. Vaandrager",
+  editor =       "Grzegorz Rozenberg and Frits W. Vaandrager",
   pages =        "368--394",
-  doi = 	 "10.1007/3-540-65193-4_29",
-  url = 	 "http://dx.doi.org/10.1007/3-540-65193-4_29",
-  edition = 	 "",
-  number = 	 "",
-  type = 	 "",
-  month = 	 "",
-  note = 	 "",
+  doi =          "10.1007/3-540-65193-4_29",
+  url =          "http://dx.doi.org/10.1007/3-540-65193-4_29",
+  edition =      "",
+  number =       "",
+  type =         "",
+  month =        "",
+  note =         "",
 }
 
 
@@ -389,12 +389,12 @@
   year =         "1997",
   address =      "",
   edition =      "",
-  editor = 	 "",
-  volume = 	 "",
-  number = 	 "",
-  series = 	 "",
-  month = 	 "",
-  note = 	 "",
+  editor =       "",
+  volume =       "",
+  number =       "",
+  series =       "",
+  month =        "",
+  note =         "",
 }
 
 
@@ -407,31 +407,31 @@
   edition =      "3rd",
   address =      "",
   publisher =    "Addison Wesley Longman Publishing Co., Inc.",
-  doi = 	 "",
-  url = 	 "",
-  editor = 	 "",
-  number = 	 "",
-  month = 	 "",
-  note = 	 "(book)",
+  doi =          "",
+  url =          "",
+  editor =       "",
+  number =       "",
+  month =        "",
+  note =         "(book)",
 }
 
 %Inbook{Knuth97,
-%  author = 	 "Donald E. Knuth",
-%  title = 	 "The Art of Computer Programming",
+%  author =       "Donald E. Knuth",
+%  title =        "The Art of Computer Programming",
 %  booktitle =    "the booktitle",
 %  edition =      "3",
 %  volume =       "1",
 %  year =         "1997",
 %  publisher =    "Addison Wesley Longman Publishing Co., Inc.",
-%  editor = 	 "",
-%  number = 	 "",
-%  series = 	 "Fundamental Algorithms",
-%  type = 	 "",
-%  chapter = 	 "",
-%  pages = 	 "",
-%  address = 	 "",
-%  month = 	 "",
-%  note = 	 "(inbook)",
+%  editor =       "",
+%  number =       "",
+%  series =       "Fundamental Algorithms",
+%  type =         "",
+%  chapter =      "",
+%  pages =        "",
+%  address =      "",
+%  month =        "",
+%  note =         "(inbook)",
 %}
 
 %INBOOK{DK:73-inbook-full,
@@ -460,7 +460,7 @@
 %   month = "10~" # jan,
 %   year = "1974",
 %   pages = "10--119",
-%   editor = 	 "Bernard Rous",
+%   editor = "Bernard Rous",
 %   note = "This is a full incoll entry with an editor",
 %}
 
@@ -494,19 +494,19 @@ Editors= "Z. Ghahramani and R. Cowell"
   author =       "Stan W. Smith",
   title =        "An experiment in bibliographic mark-up: Parsing metadata for XML export",
   booktitle =    "Proceedings of the 3rd. annual workshop on Librarians and Computers",
-  series = 	 "LAC '10",
-  editor = 	 "Reginald N. Smythe and Alexander Noble",
-  volume = 	  "3",
+  series =       "LAC '10",
+  editor =       "Reginald N. Smythe and Alexander Noble",
+  volume =       "3",
   year =         "2010",
   publisher =    "Paparazzi Press",
-  address = 	 "Milan Italy",
+  address =      "Milan Italy",
   pages =        "422--431",
-  doi = 	 "99.9999/woot07-S422",
-  url = 	 "http://dx.doi.org/99.0000/woot07-S422",
-  number =	 "",
-  month = 	 "",
+  doi =          "99.9999/woot07-S422",
+  url =          "http://dx.doi.org/99.0000/woot07-S422",
+  number =       "",
+  month =        "",
   organization = "",
-  note = 	 "",
+  note =         "",
 }
 
 @Inproceedings{VanGundy07,
@@ -514,18 +514,18 @@ Editors= "Z. Ghahramani and R. Cowell"
   year =         "2007",
   title =        "Catch me, if you can: Evading network signatures with web-based polymorphic worms",
   booktitle =    "Proceedings of the first USENIX workshop on Offensive Technologies",
-  series = 	 "WOOT '07",
+  series =       "WOOT '07",
   publisher =    "USENIX Association",
-  address = 	 "Berkley, CA",
-  articleno = 	 "7",
-  numpages = 	 "9",
-  editor = 	 "",
-  volume = 	 "",
-  number = 	 "",
-  pages = 	 "",
-  month = 	 "",
+  address =      "Berkley, CA",
+  articleno =    "7",
+  numpages =     "9",
+  editor =       "",
+  volume =       "",
+  number =       "",
+  pages =        "",
+  month =        "",
   organization = "",
-  note = 	 "",
+  note =         "",
 }
 
 @Inproceedings{VanGundy08,
@@ -533,18 +533,18 @@ Editors= "Z. Ghahramani and R. Cowell"
   year =         "2008",
   title =        "Catch me, if you can: Evading network signatures with web-based polymorphic worms",
   booktitle =    "Proceedings of the first USENIX workshop on Offensive Technologies",
-  series = 	 "WOOT '08",
+  series =       "WOOT '08",
   publisher =    "USENIX Association",
-  address = 	 "Berkley, CA",
-  articleno = 	 "7",
-  numpages = 	 "2",
-  editor = 	 "",
-  volume = 	 "",
-  number = 	 "",
-  pages = 	 "99-100",
-  month = 	 "",
+  address =      "Berkley, CA",
+  articleno =    "7",
+  numpages =     "2",
+  editor =       "",
+  volume =       "",
+  number =       "",
+  pages =        "99-100",
+  month =        "",
   organization = "",
-  note = 	 "",
+  note =         "",
 }
 
 @Inproceedings{VanGundy09,
@@ -552,37 +552,37 @@ Editors= "Z. Ghahramani and R. Cowell"
   year =         "2009",
   title =        "Catch me, if you can: Evading network signatures with web-based polymorphic worms",
   booktitle =    "Proceedings of the first USENIX workshop on Offensive Technologies",
-  series = 	 "WOOT '09",
+  series =       "WOOT '09",
   publisher =    "USENIX Association",
-  address = 	 "Berkley, CA",
-  articleno = 	 "",
-  numpages = 	 "",
-  editor = 	 "",
-  volume = 	 "",
-  number = 	 "",
-  pages = 	 "90--100",
-  month = 	 "",
+  address =      "Berkley, CA",
+  articleno =    "",
+  numpages =     "",
+  editor =       "",
+  volume =       "",
+  number =       "",
+  pages =        "90--100",
+  month =        "",
   organization = "",
-  note = 	 "",
+  note =         "",
 }
 
 @Inproceedings{Andler79,
   author =       "Sten Andler",
   title =        "Predicate Path expressions",
   booktitle =    "Proceedings of the 6th. ACM SIGACT-SIGPLAN symposium on Principles of Programming Languages",
-  series = 	 "POPL '79",
+  series =       "POPL '79",
   year =         "1979",
   publisher =    "ACM Press",
-  address = 	 "New York, NY",
+  address =      "New York, NY",
   pages =        "226--236",
-  doi = 	 "10.1145/567752.567774",
-  url = 	 "http://doi.acm.org/10.1145/567752.567774",
-  editor = 	 "",
-  volume = 	 "",
-  number = 	 "",
-  month = 	 "",
+  doi =          "10.1145/567752.567774",
+  url =          "http://doi.acm.org/10.1145/567752.567774",
+  editor =       "",
+  volume =       "",
+  number =       "",
+  month =        "",
   organization = "",
-  note = 	 "",
+  note =         "",
 }
 
 @Techreport{Harel78,
@@ -593,8 +593,8 @@ Editors= "Z. Ghahramani and R. Cowell"
   type =         "MIT Research Lab Technical Report",
   number =       "TR-200",
   address =      "Cambridge, MA",
-  month = 	 "",
-  note = 	 "",
+  month =        "",
+  note =         "",
 }
 
 @MASTERSTHESIS{anisi03,
@@ -613,8 +613,8 @@ year = {2003},
   school =       "Stanford University",
   address =      "Palo Alto, CA",
   note =         "UMI Order Number: AAT 8506171",
-  type = 	 "",
-  month = 	 "",
+  type =         "",
+  month =        "",
 }
 
 
@@ -622,8 +622,8 @@ year = {2003},
   author =       "Harry Thornburg",
   year =         "2001",
   title =        "Introduction to Bayesian Statistics",
-  url =           "http://ccrma.stanford.edu/~jos/bayes/bayes.html",
-  month = 	 mar,
+  url =          "http://ccrma.stanford.edu/~jos/bayes/bayes.html",
+  month =        mar,
   lastaccessed = "March 2, 2005",
 }
 
@@ -640,22 +640,22 @@ year = {2003},
 @misc{Poker06,
   author =       "Poker-Edge.Com",
   year =         "2006",
-  month 	= mar,
+  month =        mar,
   title =        "Stats and Analysis",
   lastaccessed = "June 7, 2006",
   url =          "http://www.poker-edge.com/stats.php",
 }
 
 @misc{Obama08,
-  author 	= "Barack Obama",
-  year 		= "2008",
-  title		= "A more perfect union",
+  author        = "Barack Obama",
+  year          = "2008",
+  title         = "A more perfect union",
   howpublished  = "Video",
-  day 		= "5",
-  url 		= "http://video.google.com/videoplay?docid=6528042696351994555",
-  month 	= mar,
+  day           = "5",
+  url           = "http://video.google.com/videoplay?docid=6528042696351994555",
+  month         = mar,
   lastaccessed  = "March 21, 2008",
-  note		=  "",
+  note          =  "",
 }
 
 @misc{JoeScientist001,
@@ -663,9 +663,9 @@ year = {2003},
   year =         "2009",
   title =        "The fountain of youth",
   note =         "Patent No. 12345, Filed July 1st., 2008, Issued Aug. 9th., 2009",
-  url =           "",
+  url =          "",
   howpublished = "",
-  month = 	 aug,
+  month =        aug,
   lastaccessed = "",
 }
 
@@ -675,50 +675,50 @@ year = {2003},
   title =        "Solder man",
   booktitle =    "ACM SIGGRAPH 2003 Video Review on Animation theater Program: Part I - Vol. 145 (July 27--27, 2003)",
   year =         "2003",
-  publisher = 	 "ACM Press",
-  address = 	 "New York, NY",
+  publisher =    "ACM Press",
+  address =      "New York, NY",
   pages =        "4",
-  month = 	 "March 21, 2008",
-  doi = 	 "99.9999/woot07-S422",
-  url = 	 "http://video.google.com/videoplay?docid=6528042696351994555",
-  note = 	 "",
+  month =        "March 21, 2008",
+  doi =          "99.9999/woot07-S422",
+  url =          "http://video.google.com/videoplay?docid=6528042696351994555",
+  note =         "",
   howpublished = "Video",
-  editor = 	 "",
-  volume = 	 "",
-  number = 	 "",
-  series = 	 "",
+  editor =       "",
+  volume =       "",
+  number =       "",
+  series =       "",
   organization = "",
 }
 
 
 @article{Lee05,
   author =       "Newton Lee",
-  year = 	 "2005",
+  year =         "2005",
   title =        "Interview with Bill Kinder: January 13, 2005",
-  journal = 	 "Comput. Entertain.",
+  journal =      "Comput. Entertain.",
   eid      =     "4",
   volume =       "3",
-  number = 	 "1",
-  month =  	 "Jan.-March",
-  doi = 	 "10.1145/1057270.1057278",
-  url = 	 "http://doi.acm.org/10.1145/1057270.1057278",
+  number =       "1",
+  month =        "Jan.-March",
+  doi =          "10.1145/1057270.1057278",
+  url =          "http://doi.acm.org/10.1145/1057270.1057278",
   howpublished = "Video",
-  note =	 "",
+  note =         "",
 }
 
 @article{Rous08,
   author =       "Bernard Rous",
-  year = 	 "2008",
+  year =         "2008",
   title =        "The Enabling of Digital Libraries",
-  journal = 	 "Digital Libraries",
+  journal =      "Digital Libraries",
   volume =       "12",
-  number = 	 "3",
-  month =  	 jul,
-  articleno = 	 "5",
-  doi = 	 "",
-  url = 	 "",
+  number =       "3",
+  month =        jul,
+  articleno =    "5",
+  doi =          "",
+  url =          "",
   howpublished = "",
-  note =	 "To appear",
+  note =         "To appear",
 }
 
 @article{384253,
@@ -880,8 +880,8 @@ year = {2003},
 %%%  school =       "Stanford University",
 %%%  address =      "Palo Alto, CA",
 %%%  note =         "UMI Order Number: AAT 8506171",
-%%%  type = 	 "",
-%%%  month = 	 "",
+%%%  type =         "",
+%%%  month =        "",
 %%%}
 
 % A bibliography
@@ -1000,22 +1000,22 @@ year = {2003},
 
 % was 'Inbook' -- changed to incollection - (editor is different to author) - need to tell Asad to codify as such.
 @incollection{Kong:2002:IEC:887006.887010,
-  author = 	{Kong, Wei-Chang},
-  editor =	{Theerasak Thanasankit},
-  title =	{Chapter 9},
-  booktitle =	{E-commerce and cultural values (Incoll-w-text (chap 9) 'title')},
-  year =	{2002},
-  address =	{Hershey, PA, USA},
-  publisher =	{IGI Publishing},
-  url =		{http://portal.acm.org/citation.cfm?id=887006.887010},
-  pages =	{51--74},
-  numpages =	{24},
-  acmid =	{887010},
-  isbn =	{1-59140-056-2},
-  number = 	 "",
-  type = 	 "",
-  month = 	 "",
-  note = 	 "",
+  author =      {Kong, Wei-Chang},
+  editor =      {Theerasak Thanasankit},
+  title =       {Chapter 9},
+  booktitle =   {E-commerce and cultural values (Incoll-w-text (chap 9) 'title')},
+  year =        {2002},
+  address =     {Hershey, PA, USA},
+  publisher =   {IGI Publishing},
+  url =         {http://portal.acm.org/citation.cfm?id=887006.887010},
+  pages =       {51--74},
+  numpages =    {24},
+  acmid =       {887010},
+  isbn =        {1-59140-056-2},
+  number =      "",
+  type =        "",
+  month =       "",
+  note =        "",
 }
 
 % incol when the chapter is 'text' - due to presence of editor (different to author)
@@ -1062,86 +1062,86 @@ year = {2003},
 
 % and inbook with number in chapter
 @InBook{Kong:2004:IEC:123456.887010,
-  author = 	{Kong, Wei-Chang},
-  editor =	{Theerasak Thanasankit},
-  title =	{E-commerce and cultural values - (InBook-num-in-chap)},
-  chapter =	{9},
-  year =	{2004},
-  address =	{Hershey, PA, USA},
-  publisher =	{IGI Publishing},
-  url =		{http://portal.acm.org/citation.cfm?id=887006.887010},
-  pages =	{51--74},
-  numpages =	{24},
-  acmid =	{887010},
-  isbn =	{1-59140-056-2},
-  number = 	 "",
-  type = 	 "",
-  month = 	 "",
-  note = 	 "",
+  author =      {Kong, Wei-Chang},
+  editor =      {Theerasak Thanasankit},
+  title =       {E-commerce and cultural values - (InBook-num-in-chap)},
+  chapter =     {9},
+  year =        {2004},
+  address =     {Hershey, PA, USA},
+  publisher =   {IGI Publishing},
+  url =         {http://portal.acm.org/citation.cfm?id=887006.887010},
+  pages =       {51--74},
+  numpages =    {24},
+  acmid =       {887010},
+  isbn =        {1-59140-056-2},
+  number =      "",
+  type =        "",
+  month =       "",
+  note =        "",
 }
 
 
 % and inbook with text in chapter
 @Inbook{Kong:2005:IEC:887006.887010,
-  author = 	{Kong, Wei-Chang},
-  editor =	{Theerasak Thanasankit},
-  title =	{E-commerce and cultural values (Inbook-text-in-chap)},
-  chapter =	{The implementation of electronic commerce in SMEs in Singapore},
-  year =	{2005},
-  address =	{Hershey, PA, USA},
-  publisher =	{IGI Publishing},
-  url =		{http://portal.acm.org/citation.cfm?id=887006.887010},
+  author =      {Kong, Wei-Chang},
+  editor =      {Theerasak Thanasankit},
+  title =       {E-commerce and cultural values (Inbook-text-in-chap)},
+  chapter =     {The implementation of electronic commerce in SMEs in Singapore},
+  year =        {2005},
+  address =     {Hershey, PA, USA},
+  publisher =   {IGI Publishing},
+  url =         {http://portal.acm.org/citation.cfm?id=887006.887010},
   type =        {Chapter:},
-  pages =	{51--74},
-  numpages =	{24},
-  acmid =	{887010},
-  isbn =	{1-59140-056-2},
-  number = 	 "",
-  month = 	 "",
-  note = 	 "",
+  pages =       {51--74},
+  numpages =    {24},
+  acmid =       {887010},
+  isbn =        {1-59140-056-2},
+  number =      "",
+  month =       "",
+  note =        "",
 }
 
 
 % and inbook with a num and type field
 @Inbook{Kong:2006:IEC:887006.887010,
-  author = 	{Kong, Wei-Chang},
-  editor =	{Theerasak Thanasankit},
-  title =	{E-commerce and cultural values (Inbook-num chap)},
-  chapter =	{22},
-  year =	{2006},
-  address =	{Hershey, PA, USA},
-  publisher =	{IGI Publishing},
-  url =		{http://portal.acm.org/citation.cfm?id=887006.887010},
+  author =      {Kong, Wei-Chang},
+  editor =      {Theerasak Thanasankit},
+  title =       {E-commerce and cultural values (Inbook-num chap)},
+  chapter =     {22},
+  year =        {2006},
+  address =     {Hershey, PA, USA},
+  publisher =   {IGI Publishing},
+  url =         {http://portal.acm.org/citation.cfm?id=887006.887010},
   type =        {Chapter (in type field)},
-  pages =	{51--74},
-  numpages =	{24},
-  acmid =	{887010},
-  isbn =	{1-59140-056-2},
-  number = 	 "",
-  month = 	 "",
-  note = 	 "",
+  pages =       {51--74},
+  numpages =    {24},
+  acmid =       {887010},
+  isbn =        {1-59140-056-2},
+  number =      "",
+  month =       "",
+  note =        "",
 }
 
 
 % and incol coz we have a BLANK chapter - due to presence of editor
 %atIncollection{Kong:2006:IEC:887006.887011,
-%  author = 	{Kong, Wei-Chang},
-%  editor =	{Theerasak Thanasankit},
-%  title =       "The title"
-%  booktitle =	{E-commerce and cultural values (Incol-coz-blank-chap)},
-%  year =	{2006},
-%  address =	{Hershey, PA, USA},
-%  publisher =	{IGI Publishing},
-%  url =		{http://portal.acm.org/citation.cfm?id=887006.887010},
-%  type =        {Type!},
-%  chapter =	{},
-%  pages =	{51--74},
-%  numpages =	{24},
-%  acmid =	{887010},
-%  isbn =	{1-59140-056-2},
-%  number = 	 "",
-%  month = 	 "",
-%  note = 	 "",
+%  author =     {Kong, Wei-Chang},
+%  editor =     {Theerasak Thanasankit},
+%  title =      "The title"
+%  booktitle =  {E-commerce and cultural values (Incol-coz-blank-chap)},
+%  year =       {2006},
+%  address =    {Hershey, PA, USA},
+%  publisher =  {IGI Publishing},
+%  url =        {http://portal.acm.org/citation.cfm?id=887006.887010},
+%  type =       {Type!},
+%  chapter =    {},
+%  pages =      {51--74},
+%  numpages =   {24},
+%  acmid =      {887010},
+%  isbn =       {1-59140-056-2},
+%  number =     "",
+%  month =      "",
+%  note =       "",
 %}
 
 @article{SaeediMEJ10,
@@ -1319,7 +1319,7 @@ MRREVIEWER = {Min You Qi},
   title         = {A multi-radio unification protocol for {IEEE} 802.11 wireless networks},
   booktitle     = {Proceedings of the IEEE 1st International Conference on Broadnets Networks (BroadNets'04)},
   publisher     = "IEEE",
-  address       = "Los Alamitos, CA",		  
+  address       = "Los Alamitos, CA",
   year          = {2004},
   pages         = "210--217"
 }
@@ -1349,7 +1349,7 @@ MRREVIEWER = {Min You Qi},
   title         = {{SSCH}: Slotted Seeded Channel Hopping for Capacity Improvement in {IEEE} 802.11 Ad-Hoc Wireless Networks},
   booktitle     = {Proceeding of the 10th International Conference on Mobile Computing and Networking (MobiCom'04)},
   publisher     = "ACM",
-  address       = "New York, NY",		  
+  address       = "New York, NY",
   year          = {2004},
   pages         = "112--117"
 }
@@ -1368,7 +1368,7 @@ MRREVIEWER = {Min You Qi},
   volume        = 37,
   number        = "8 (Special Issue on Sensor Networks)",
   publisher     = "IEEE",
-  address       = "Los Alamitos, CA",		  
+  address       = "Los Alamitos, CA",
   year          = {2004},
   pages         = "41--49"
 }
@@ -1386,7 +1386,7 @@ MRREVIEWER = {Min You Qi},
     booktitle   = {Network Architectures},
     editor      = {G. Whitcomb and P. Neece},
     publisher   = "Keleuven Press",
-    address     = "Dayton, OH",		  
+    address     = "Dayton, OH",
     year        = {2007},
     pages       = "322--328",
     eprint      = "960935712",
@@ -1406,7 +1406,7 @@ MRREVIEWER = {Min You Qi},
   author        = {G. Zhou and J. Lu and C.-Y. Wan and M. D. Yarvis and J. A. Stankovic},
   title         = {Body Sensor Networks},
   publisher     = "MIT Press",
-  address       = "Cambridge, MA",		  
+  address       = "Cambridge, MA",
   year          = {2008}
 }
 
@@ -1513,7 +1513,7 @@ booktitle = "Proceedings of the 7th Annual Symposium on Principles of
 month = jan,
 year = 1980,
 publisher = "ACM",
-address = "New York",		  
+address = "New York",
 pages = "24--31"}
 
 @article{Zhou:2010:MMS:1721695.1721705,
@@ -1542,7 +1542,7 @@ pages = "24--31"}
   key =          {TUG},
   year  =        2017,
   title =        "Institutional members of the {\TeX} Users Group",
-  url =           "http://wwtug.org/instmem.html",
+  url =          "http://wwtug.org/instmem.html",
   lastaccessed = "May 27, 2017",
 }
 
@@ -1577,13 +1577,14 @@ pages = "24--31"}
 }
 
 @INPROCEEDINGS{clark:pct,
-	AUTHOR = "Malcolm Clark",
-	TITLE = "Post Congress Tristesse",
-	BOOKTITLE = "TeX90 Conference Proceedings",
-	PAGES = "84-89",
-	ORGANIZATION = "TeX Users Group",
-	MONTH = "March", 
-	YEAR = {1991}	}
+  AUTHOR = "Malcolm Clark",
+  TITLE = "Post Congress Tristesse",
+  BOOKTITLE = "TeX90 Conference Proceedings",
+  PAGES = "84-89",
+  ORGANIZATION = "TeX Users Group",
+  MONTH = "March", 
+  YEAR = {1991}
+}
 
 @ARTICLE{herlihy:methodology,
     author = {Herlihy, Maurice},
@@ -1598,25 +1599,26 @@ pages = "24--31"}
 }
 
 @BOOK{salas:calculus,
-	AUTHOR = "S.L. Salas and Einar Hille",
-	TITLE = "Calculus: One and Several Variable",
-	PUBLISHER = "John Wiley and Sons",
-	ADDRESS = "New York",
-	YEAR = "1978"	}
+  AUTHOR = "S.L. Salas and Einar Hille",
+  TITLE = "Calculus: One and Several Variable",
+  PUBLISHER = "John Wiley and Sons",
+  ADDRESS = "New York",
+  YEAR = "1978"
+}
 
 @MANUAL{Fear05,
-  title = 	 {Publication quality tables in {\LaTeX}},
-  author =	 {Simon Fear},
-  month =	 {April},
-  year =	 2005,
-  note =	 {\url{http://www.ctan.org/pkg/booktabs}}
+  title =        {Publication quality tables in {\LaTeX}},
+  author =       {Simon Fear},
+  month =        {April},
+  year =         2005,
+  note =         {\url{http://www.ctan.org/pkg/booktabs}}
 }
 
 @Manual{Amsthm15,
-  title = 	 {Using the amsthm Package},
+  title =        {Using the amsthm Package},
   organization = {American Mathematical Society},
-  month =	 {April},
-  year =	 2015,
-  note =	 {\url{http://www.ctan.org/pkg/amsthm}}
+  month =        {April},
+  year =         2015,
+  note =         {\url{http://www.ctan.org/pkg/amsthm}}
 }
 
