--- a/README
+++ b/README
@@ -163,4 +163,5 @@ Version 1.48    Bug fixes
                 separate date
                 Acmart and version info are added to pdfcreator tag
                 \citeyear no longer produces parenthetical year
-                
+                Added initial support for Biblatex (Daniel Thomas)
+		
