--- a/acmart.dtx
+++ b/acmart.dtx
@@ -121,6 +121,7 @@
 %  Bernard Rous,
 %  David Shamma,
 %  Stephen Spencer,
+%  Daniel Thomas,
 %  John Wickerson
 %  and many others for their invaluable help.
 %
@@ -1729,6 +1730,7 @@ Computing Machinery]
 % \changes{v1.48}{2017/09/16}{Code prettying (Michael D.~Adams)}
 % \changes{v1.48}{2017/09/23}{Misc entries in the bibliography no
 % longer produce a separate date}
+% \changes{v1.48}{2017/10/01}{Initial support for Biblatex (Daniel Thomas)}
 %
 %
 % And the driver code:
