Added missing "the" in `README`

--- a/README
+++ b/README
@@ -1,8 +1,8 @@
-This package provides a class for typesetting publications of 
+This package provides a class for typesetting publications of the
 Association for Computing Machinery.
 
 Your TeX distribution probably includes the latest released version of
-this package.  If you decide to install it yourself, please see
+this package.  If you decide to install it yourself, please see the
 Installation section of the User's Guide.
 
 Changes
