Rename `sigchi-a.bib` to `sample-bibliography-sigchi-a.bib`. (This makes its naming consistent with the other sample bibliographies.)

--- a/sample-sigchi-a.tex
+++ b/sample-sigchi-a.tex
@@ -432,7 +432,7 @@ black.
 
 
 
-\bibliography{sigchi-a}
+\bibliography{sample-bibliography-sigchi-a}
 \bibliographystyle{ACM-Reference-Format}
 
 \end{document}
