--- a/acmart.dtx
+++ b/acmart.dtx
@@ -111,6 +111,7 @@
 %  Ben Liblit,
 %  Kai Mindermann,
 %  Frank Mittelbach,
+%  Serguei Mokhov,
 %  Ross Moore,
 %  John Owens,
 %  Joel Nider,
@@ -4484,6 +4485,7 @@ Computing Machinery]
 % \changes{v1.46}{2017/08/28}{Thankses go before authors' addresses}
 % \changes{v1.48}{2017/09/23}{Added acmart and version info to
 % pdfcreator tag}
+% \changes{v1.48}{2017/10/14}{Suppressed empty DOI (Serguei Mokhov)}
 %   The (in)famous \cs{maketitle}.  Note that in |sigchi-a| mode, authors
 %   are \emph{not} in the title box.
 %
