--- a/acmart.dtx
+++ b/acmart.dtx
@@ -123,6 +123,7 @@
 %  David Shamma,
 %  Stephen Spencer,
 %  Daniel Thomas,
+%  Zack Weinberg,
 %  John Wickerson
 %  and many others for their invaluable help.
 %
@@ -1732,7 +1733,7 @@ Computing Machinery]
 % \changes{v1.48}{2017/09/23}{Misc entries in the bibliography no
 % longer produce a separate date}
 % \changes{v1.48}{2017/10/01}{Initial support for Biblatex (Daniel Thomas)}
-%
+% \changes{1.48}{2017/10/14}{Bib code cleanup (Zack Weinberg)}
 %
 % And the driver code:
 %    \begin{macrocode}
