Added release info.  Closes #214

--- a/README
+++ b/README
@@ -5,6 +5,11 @@ Your TeX distribution probably includes the latest released version of
 this package.  If you decide to install it yourself, please see the
 Installation section of the User's Guide.
 
+Please note that the version on Github is a development (or
+experimental) version: please download it for testing new features.
+The production version is the one on CTAN and ACM sites.  
+
+
 Changes
 
 version 1.08    SIGPLAN reformatting (Matthew Fluet); bug fixes
