--- a/acmart.dtx
+++ b/acmart.dtx
@@ -159,6 +159,9 @@
 % At this address you can file a bug report---or even contribute your
 % own enhancement by making a pull request.
 %
+% Please note that the version on Github is a development (or
+% experimental) version: please download it for testing new features.
+% The production version is the one on CTAN and ACM sites.  
 %
 % Most users should not attempt to install this package themselves
 % but should rather rely on their \TeX\ distributions to provide it.  If you
@@ -1656,7 +1659,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2017/10/22 v1.48 Typesetting articles for the Association for
+[2017/11/18 v1.48 Typesetting articles for the Association for
 Computing Machinery]
 %    \end{macrocode}
 %
