--- a/acmart.dtx
+++ b/acmart.dtx
@@ -117,6 +117,7 @@
 %  Joel Nider,
 %  Tobias Pape,
 %  Mathias Rav,
+%  Andreas Reichinger,
 %  Matteo Riondato,
 %  Craig Rodkin,
 %  Bernard Rous,
@@ -4492,6 +4493,8 @@ Computing Machinery]
 % \changes{v1.48}{2017/09/23}{Added acmart and version info to
 % pdfcreator tag}
 % \changes{v1.48}{2017/10/14}{Suppressed empty DOI (Serguei Mokhov)}
+% \changes{v1.48}{2017/11/18}{Added language and doctitle attributes
+% to PDF (Andreas Reichinger)}
 %   The (in)famous \cs{maketitle}.  Note that in |sigchi-a| mode, authors
 %   are \emph{not} in the title box.
 %
@@ -4610,7 +4613,10 @@ Computing Machinery]
   \if@ACM@printacmref
      \@mkbibcitation
   \fi
-  \hypersetup{pdfauthor={\authors},
+  \hypersetup{%
+    pdflang={English},
+    pdfdisplaydoctitle,
+    pdfauthor={\authors},
     pdftitle={\@title},
     pdfsubject={\@concepts},
     pdfkeywords={\@keywords},
