Typo corrected (thanks to Sebastian Krinninger)

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -736,7 +736,7 @@
 % default) or |true|.  If this parameter is |true|, \cs{afffiliation}
 % obeys the author's command.  Thus
 % \begin{verbatim}
-% \affiliation[obeypuctuation=true]{%
+% \affiliation[obeypunctuation=true]{%
 %   \institution{Fluginstitut}\\
 %   \streetaddress{Sonnenallee 17}\\
 %   \postcode{123456}
