Documentation update (siggraph)

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -286,12 +286,10 @@
 %   acmlarge  & Large single-column format.  Used for
 %           IMWUT, JOCCH, POMACS and TAP, including special issues. \\
 %   acmtog   & Large double-column format.  Used for
-%          TOG, including special issues.\\
+%          TOG, including annual conference Technical Papers.\\
 %   sigconf & Proceedings format for most ACM
 %          conferences (with the exceptions listed below) and all ICPS
 %          volumes.\\
-%   siggraph & As of March 2017, this format is no longer
-%           used.  Please use |sigconf| for SIGGRAPH conferences. \\
 %   sigplan & Proceedings format for SIGPLAN conferences.\\
 %   sigchi  & Proceedings format for SIGCHI conferences.\\
 %   sigchi-a & Format for SIGCHI extended abstracts.\\
@@ -1660,7 +1658,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2017/11/18 v1.48 Typesetting articles for the Association for
+[2017/12/03 v1.48 Typesetting articles for the Association for
 Computing Machinery]
 %    \end{macrocode}
 %
@@ -1738,6 +1736,7 @@ Computing Machinery]
 % longer produce a separate date}
 % \changes{v1.48}{2017/10/01}{Initial support for Biblatex (Daniel Thomas)}
 % \changes{1.48}{2017/10/14}{Bib code cleanup (Zack Weinberg)}
+% \changes{1.48}{2017/12/03}{Documentation update (siggraph)}
 %
 % And the driver code:
 %    \begin{macrocode}
