Added license statement for CC

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -4281,9 +4281,11 @@ Computing Machinery]
   Copyright held by the owner/author(s). Publication rights licensed to
   the Association for Computing Machinery.
   \or % ic2w3www
-  IW3C2 (International World Wide Web Conference Committee).
+  IW3C2 (International World Wide Web Conference Committee), published
+  under Creative Commons CC~BY~4.0 License.
   \or % ic2w3wwwgoogle
-  IW3C2 (International World Wide Web Conference Committee).  
+  IW3C2 (International World Wide Web Conference Committee), published
+  under Creative Commons CC~BY-NC-ND~4.0 License.
   \fi}
 %    \end{macrocode}
 %
