--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1019,9 +1019,9 @@
 %     \texttt{licensedothergov} & Authors are employees of a
 %     government other than the US or Canada, and the publication rights
 %                                   are licensed to the ACM\@. \\
-%     \texttt{iw3c2www} & Special statement for conferences organized
+%     \texttt{iw3c2w3} & Special statement for conferences organized
 %     by IW3C2.\\
-%     \texttt{iw3c2wwwgoogle} & Special statement for conferences organized
+%     \texttt{iw3c2w3g} & Special statement for conferences organized
 %     by IW3C2, when some authors are approved Google employees.\\
 %     \bottomrule
 %   \end{tabularx}
@@ -4188,7 +4188,7 @@ Computing Machinery]
     acmcopyright,acmlicensed,rightsretained,%
     usgov,usgovmixed,cagov,cagovmixed,licensedusgovmixed,%
     licensedcagov,licensedcagovmixed,othergov,licensedothergov,%
-    iw3c2www,iw3c2wwwgoogle}{%
+    iw3c2w3,iw3c2w3g}{%
   \@printpermissiontrue
   \@printcopyrighttrue
   \@acmownedtrue
@@ -4228,10 +4228,10 @@ Computing Machinery]
   \ifnum\acm@copyrightmode=12\relax % licensedothergov
    \@acmownedfalse
   \fi
-  \ifnum\acm@copyrightmode=13\relax % iw3c2www
+  \ifnum\acm@copyrightmode=13\relax % iw3c2w3
    \@acmownedfalse
   \fi
-  \ifnum\acm@copyrightmode=14\relax % iw3c2wwwgoogle
+  \ifnum\acm@copyrightmode=14\relax % iw3c2w3g
    \@acmownedfalse
   \fi}
 %    \end{macrocode}
@@ -4416,7 +4416,7 @@ Computing Machinery]
    retains a nonexclusive, royalty-free right to publish or reproduce
    this article, or to allow others to do so, for Government purposes
    only.
- \or % iw3c2www
+ \or % iw3c2w3
    This paper is published under the Creative Commons Attribution~4.0
    International (CC~BY~4.0) license. Authors reserve their rights to
    disseminate the work on their personal and corporate Web sites with
@@ -4425,7 +4425,7 @@ Computing Machinery]
    WWW\@acmYear{} Proceedings \textcopyright{} \@copyrightyear{}
    International World Wide Web Conference Committee, published under
    Creative Commons~CC~BY~4.0  License.'' 
- \or % iw3c2wwwgoogle
+ \or % iw3c2w3g
    This paper is published under the Creative Commons
    Attribution-NonCommercial-NoDerivs~4.0 International
    (CC~BY-NC-ND~4.0) license. Authors reserve their rights to
